# 2dgameengine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
libs/easyloggingpp/: CMakeLists.txt  easylogging++.cc
libs/sol/: config.hpp  forward.hpp  sol.hpp
libs/utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/: Main.cpp
src/APS/: APS.cpp  APS.h  APS.tpp  Actor.cpp  Actor.h  CMakeLists.txt  Director.cpp  Director.h  Director.tpp  Prop.cpp  Prop.h  Prop.tpp  Script.cpp  Script.h  Script.tpp  Store.cpp  Store.h  Store.tpp
src/Arena/: Arena.cpp  Arena.h  Arena.tpp  ArenaManager.cpp  ArenaManager.h  ArenaManager.tpp  CMakeLists.txt
src/AssetStore/: AssetStore.cpp  AssetStore.h  CMakeLists.txt
src/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Props/: CMakeLists.txt  RigidBodyProp.h  SpriteProp.h  TransformProp.h
src/Scripts/: CMakeLists.txt  MovementScript.h  RenderScript.h
src/Stage/: CMakeLists.txt  Stage.cpp  Stage.h
